# kelpmesh

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  BRIQ_PROJECT_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DPA.md  KELPMESH_PROJECT_STATUS.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TERMS.md  bitbucket-pipelines.yml  kelpmesh.yml  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-site.yml  publish-vscode.yml  publish.yml  test.yml
briq/: __init__.py  __main__.py
briq/adapters/: __init__.py  base.py  bigquery.py  databricks.py  duckdb.py  fabric.py  postgres.py  redshift.py  snowflake.py
briq/cli/: build.py  clean.py  compare.py  compile.py  debug.py  deps.py  diff.py  docs.py  export.py  exposures.py  freshness.py  generate.py  history.py  import_dbt.py  init.py  ls.py  main.py  mesh.py  metrics.py  orchestrate.py  package_cli.py  plan.py  pre_commit.py  preview.py  run.py  scan.py  schema.py  security.py  seed.py  serve.py  sources.py  studio.py  test.py
briq/core/: ci.py  config.py  contracts.py  crypto.py  executor.py  graph.py  macros.py  model.py  packages.py  project.py  schema_yaml.py  substitutions.py
briq/diff/: comparison.py  engine.py
briq/docs/: generator.py
briq/mesh/: __init__.py  health.py
briq/observability/: alerts.py  anomaly.py  history.py
briq/orchestrate/: engine.py
briq/parser/: lineage.py  sql.py
briq/schema/: drift.py
briq/security/: __init__.py  audit.py  classifier.py  erasure.py  masking.py  rls.py
briq/semantic/: __init__.py  serve.py
briq/state/: engine.py
briq/studio/: __init__.py  app.py
briq/testing/: runner.py  schema_tests.py
briq_packages/briq-expectations/: package.yml
briq_packages/briq-utils/: package.yml
ci/: gitlab.yml
docs/: index.md  kelpmesh-vs-dbt-vs-sqlmesh.html  requirements.md  user-guide.md
docs/about/: contributing.md  license.md  roadmap.md
docs/blog/: case-study-finflow.md  hn-post.md  launch.md
docs/cli/: core.md  index.md  scan.md  security.md
docs/guide/: configuration.md  incremental.md  installation.md  mesh.md  models.md  project-structure.md  quickstart.md  semantic-layer.md  testing.md
docs/ide/: jetbrains.md  vscode.md
docs/integrations/: airflow.md  github-actions.md  gitlab-ci.md  pre-commit.md  vscode.md
docs/migration/: from-dbt.md
docs/models/: contracts.md  grain-audits.md  materializations.md  versioning.md
docs/security/: audit.md  classification.md  encryption.md  erasure.md  index.md  masking.md  rls.md  secrets.md
docs/studio/: overview.md
docs/warehouses/: bigquery.md  databricks.md  duckdb.md  fabric.md  postgres.md  redshift.md  snowflake.md
extensions/airflow/: README.md  pyproject.toml
extensions/airflow/briq_airflow/: dags.py  operators.py
extensions/airflow/briq_airflow/example_dags/: briq_auto.py  briq_daily.py
extensions/airflow/kelpmesh_airflow/: dags.py  operators.py
extensions/airflow/kelpmesh_airflow/example_dags/: briq_auto.py  briq_daily.py
extensions/briq-expectations/: README.md  briq_package.yml  expect_column_not_null.sql  expect_column_values_in_set.sql  expect_rowcount_equal.sql
extensions/briq-utils/: README.md  briq_package.yml  date_spine.sql  unpivot.sql
extensions/dagster/: kelpmesh_dagster.py
extensions/kelpmesh-expectations/: README.md  briq_package.yml  expect_column_unique.sql
extensions/kelpmesh-utils/: README.md  group_by.sql  kelpmesh_package.yml  pivot.sql  surrogate_key.sql
extensions/prefect/: kelpmesh_prefect.py
extensions/studio/: Dockerfile  README.md  briq_studio_ui_mockup.html  pyproject.toml
extensions/studio/backend/briq_studio/: alerts.py  api_keys.py  audit.py  auth.py  billing.py  config.py  db.py  git_sync.py  pricing.py  pricing.yml  rbac.py  scheduler.py  server.py  sla.py
extensions/studio/backend/kelpmesh_studio/: alerts.py  api_keys.py  audit.py  auth.py  billing.py  config.py  db.py  git_sync.py  licensing.py  pricing.py  pricing.yml  rbac.py  scheduler.py  server.py  sla.py
extensions/studio/frontend/: index.html
extensions/vscode/: .vscodeignore  LICENSE  README.md  package.json
infra/: soc2-checklist.md
infra/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
infra/terraform/: main.tf
kelpmesh/: __init__.py  __main__.py
kelpmesh/adapters/: __init__.py  athena.py  base.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  fabric.py  hive.py  mysql.py  postgres.py  redshift.py  snowflake.py  spark.py  sqlserver.py  trino.py
kelpmesh/cli/: __init__.py  build.py  ci.py  clean.py  compare.py  compile.py  create_test.py  debug.py  deps.py  diff.py  docs.py  export.py  exposures.py  format.py  freshness.py  generate.py  history.py  import_dbt.py  init.py  license.py  lint.py  ls.py  main.py  mesh.py  metrics.py  orchestrate.py  package_cli.py  plan.py  pre_commit.py  preview.py  rollback.py  run.py  scan.py  schedule.py  schema.py  security.py  seed.py  serve.py  sources.py  studio.py  (+1 more)
kelpmesh/core/: __init__.py  audits.py  ci.py  config.py  contracts.py  crypto.py  errors.py  executor.py  graph.py  macros.py  model.py  packages.py  project.py  python_runner.py  scheduler.py  schema_yaml.py  substitutions.py  versioning.py
kelpmesh/diff/: __init__.py  comparison.py  engine.py
kelpmesh/docs/: __init__.py  generator.py
kelpmesh/integrations/: __init__.py  bitbucket.py  github.py  gitlab.py
kelpmesh/mesh/: __init__.py  access.py  config.py  contracts.py  health.py  resolver.py
kelpmesh_core/: __init__.py
models/: example_model.sql
recipe/: meta.yaml
sample_project/: briq.yml  kelpmesh.yml  seed.sql
tests/: example_model.sql  test_adapters_incremental.py  test_analyses.py  test_compile.py  test_graph.py  test_hooks.py  test_integration.py  test_macros.py  test_parser.py  test_performance.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_d.py  test_phase_e.py  test_phase_f.py  test_phase_g.py  test_phase_h.py  test_project.py  test_security.py  test_security_subsystems.py  test_seeds_v2.py  test_state.py  test_substitutions.py  test_tag_selection.py
(+70 files in other folders)
