[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briq"
version = "0.2.0"
description = "Pure SQL transformation and data modelling platform — a modern alternative to dbt"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "briq", email = "hello@briq.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = [
    "sql", "dbt", "data", "analytics", "etl", "transformation",
    "data-engineering", "data-pipeline", "analytics-engineering",
    "data-modeling", "data-warehouse", "duckdb", "snowflake",
    "bigquery", "databricks", "postgres", "microsoft-fabric",
    "column-lineage", "schema-drift", "audit-log", "rls",
    "data-masking", "nFADP", "GDPR", "compliance",
]
dependencies = [
    "typer>=0.12",
    "sqlglot>=25.0",
    "networkx>=3.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://briq.dev"
Repository = "https://github.com/briq-dev/briq"
Documentation = "https://briq.dev/docs"
Discord = "https://discord.gg/briq"

[project.scripts]
briq = "briq.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
airflow = [
    "apache-airflow>=2.8",
]
studio = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["briq"]

[tool.hatch.build.targets.sdist]
include = ["briq/", "LICENSE", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
