[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briq"
version = "0.2.0"
description = "Pure SQL transformation and data modelling platform — a modern alternative to dbt"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Saikat Roy", email = "saikatxtreme@gmail.com" },
]
maintainers = [
    { name = "Saikat Roy", email = "saikatxtreme@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = [
    "sql", "dbt", "sqlmesh", "data", "analytics", "etl", "transformation",
    "data-engineering", "data-pipeline", "analytics-engineering",
    "data-modeling", "data-warehouse", "duckdb", "snowflake",
    "bigquery", "databricks", "postgres", "microsoft-fabric",
    "column-lineage", "schema-drift", "audit-log", "rls",
    "data-masking", "GDPR", "compliance", "incremental",
]
dependencies = [
    "typer>=0.12",
    "sqlglot>=25.0",
    "networkx>=3.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/saikatxtreme/briq"
Repository = "https://github.com/saikatxtreme/briq"
Documentation = "https://github.com/saikatxtreme/briq/wiki"
"Bug Tracker" = "https://github.com/saikatxtreme/briq/issues"

[project.scripts]
briq = "briq.cli.main:main"

[project.optional-dependencies]
studio = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
]
postgres = [
    "psycopg2-binary>=2.9",
]
snowflake = [
    "snowflake-connector-python>=3.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
databricks = [
    "databricks-sql-connector>=3.0",
]
fabric = [
    "pyodbc>=5.0",
    "azure-identity>=1.15",
]
redshift = [
    "psycopg2-binary>=2.9",
]
all-warehouses = [
    "psycopg2-binary>=2.9",
    "snowflake-connector-python>=3.0",
    "google-cloud-bigquery>=3.0",
    "databricks-sql-connector>=3.0",
]
airflow = [
    "apache-airflow>=2.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["briq"]

[tool.hatch.build.targets.sdist]
include = ["briq/", "LICENSE", "README.md", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
