[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KelpMesh"
version = "1.0.8"
description = "Code-native data transformation platform - SQL & Python models, open-source alternative to dbt"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Roy Pulse AI", email = "roypulse.ai@gmail.com" },
]
maintainers = [
    { name = "Roy Pulse AI", email = "roypulse.ai@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = [
    "sql", "dbt", "sqlmesh", "data", "analytics", "etl", "transformation",
    "data-engineering", "data-pipeline", "analytics-engineering",
    "data-modeling", "data-warehouse", "duckdb", "snowflake",
    "bigquery", "databricks", "postgres", "microsoft-fabric",
    "column-lineage", "schema-drift", "audit-log", "rls",
    "data-masking", "GDPR", "compliance", "incremental",
]
dependencies = [
    "typer>=0.12",
    "sqlglot>=25.0",
    "networkx>=3.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5",
    "cryptography>=42.0",
    "pandas>=2.0",
    "pytz>=2024.1",
]

[project.urls]
Homepage = "https://github.com/RoyPulseAI/kelpmesh"
Repository = "https://github.com/RoyPulseAI/kelpmesh"
Documentation = "https://github.com/RoyPulseAI/kelpmesh/wiki"
"Bug Tracker" = "https://github.com/RoyPulseAI/kelpmesh/issues"

[project.scripts]
kelpmesh = "kelpmesh.cli.main:main"

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]
snowflake = [
    "snowflake-connector-python>=3.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
databricks = [
    "databricks-sql-connector>=3.0",
]
fabric = [
    "pyodbc>=5.0",
    "azure-identity>=1.15",
]
redshift = [
    "psycopg2-binary>=2.9",
]
mysql = [
    "mysql-connector-python>=8.3",
]
trino = [
    "trino>=0.328",
]
clickhouse = [
    "clickhouse-driver>=0.2",
]
spark = [
    "pyspark>=3.4",
    "pyhive>=0.7",
]
athena = [
    "pyathena>=3.0",
    "boto3>=1.26",
]
hive = [
    "pyhive>=0.7",
    "sasl>=0.3",
    "thrift>=0.16",
    "thrift-sasl>=0.4",
]
sqlserver = [
    "pyodbc>=5.0",
]
all-warehouses = [
    "psycopg2-binary>=2.9",
    "snowflake-connector-python>=3.0",
    "google-cloud-bigquery>=3.0",
    "databricks-sql-connector>=3.0",
    "mysql-connector-python>=8.3",
    "trino>=0.328",
    "clickhouse-driver>=0.2",
]
studio = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
airflow = [
    "apache-airflow>=2.8",
]
dagster = [
    "dagster>=1.6",
    "dagster-webserver>=1.6",
]
prefect = [
    "prefect>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["kelpmesh"]

[tool.hatch.build.targets.sdist]
include = ["kelpmesh/", "LICENSE", "README.md", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"kelpmesh/cli/main.py" = ["E402"]
"kelpmesh/cli/lint.py" = ["N802"]
"kelpmesh/security/erasure.py" = ["E402"]
"kelpmesh/studio/app.py" = ["E501"]
"kelpmesh/docs/generator.py" = ["E501"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
