[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kelpmesh-airflow"
version = "0.1.0"
description = "Apache Airflow operators and helpers for KelpMesh"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "kelpmesh>=0.1.0",
    "apache-airflow>=2.8",
]

[project.scripts]
kelpmesh-airflow = "kelpmesh_airflow.__main__:main"
